# ken

./: .gitignore  .impeccable.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  index.html  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.agent-desktop/: config.json  tasks.json
.cargo/: config.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  installer-test.yml  release.yml
crates/ken-core/: Cargo.toml
crates/ken-core/examples/: llm_exit_repro.rs
crates/ken-core/fixtures/project/archive/: old-notes.md
crates/ken-core/fixtures/project/docs/: deck.pptx  sample.docx
crates/ken-core/fixtures/project/notes/: meeting.md  plain.txt
crates/ken-core/fixtures/project/src/: example.rs
crates/ken-core/src/: assistant.rs  automation.rs  bg_hydrate.rs  chat.rs  cloud.rs  db.rs  digest.rs  engine.rs  error.rs  extract.rs  fsops.rs  hooks.rs  import.rs  knowledge_model.rs  lib.rs  local_llm.rs  model.rs  project.rs  pty_registry.rs  recipe.rs  refresh.rs  registry.rs  research.rs  runner.rs  scan.rs  sync.rs  transcript.rs  user_state.rs  watch.rs
crates/ken-core/src/ocr/: mac.rs  mod.rs
crates/ken-core/src/record/: mac.rs  mod.rs
crates/ken-core/tests/: local_llm_integration.rs  qa_probe.rs
crates/ken-mcp/: Cargo.toml  build.rs
crates/ken-mcp/src/: main.rs
crates/ken-mcp/tests/: stdio.rs
docs/design/: design-tokens.md  ken-prototype-v2.dc.html
docs/superpowers/plans/: 2026-07-14-wave4-ingests-automations.md  2026-07-14-wave4-local-llm.md  2026-07-14-wave4-map-incremental.md  2026-07-14-wave4-pptx.md  2026-07-14-wave4-record.md  2026-07-14-wave4-ui-fixes.md  2026-07-22-auto-update.md  2026-07-22-progress-bars.md  2026-07-22-windows-x64-build.md
docs/superpowers/specs/: 2026-07-12-ken-design.md  2026-07-13-ken-wave4-design.md  2026-07-22-auto-update-design.md  2026-07-22-progress-bars-design.md  2026-07-22-quick-answer-speed-and-ranking-design.md  2026-07-22-windows-x64-build-design.md
harness/: main.ts  pptx.html  vite.config.ts
openspec/changes/ai-ingests/: design.md  proposal.md  tasks.md
openspec/changes/ai-ingests/specs/ingest-recipes/: spec.md
openspec/changes/ai-ingests/specs/ingest-refresh/: spec.md
openspec/changes/ai-ingests/specs/ingest-runner/: spec.md
openspec/changes/chat-drawer/: design.md  proposal.md  tasks.md
openspec/changes/chat-drawer/specs/chat-drawer-ui/: spec.md
openspec/changes/chat-drawer/specs/chat-sessions/: spec.md
openspec/changes/deep-research/: README.md  design.md  proposal.md  tasks.md
openspec/changes/deep-research/specs/deep-research/: spec.md
openspec/changes/home-digest/: README.md  design.md  proposal.md  tasks.md
openspec/changes/home-digest/specs/home-digest/: spec.md
openspec/changes/home-digest/specs/quick-answer/: spec.md
openspec/changes/install-release/: design.md  proposal.md  tasks.md
openspec/changes/install-release/specs/install-distribution/: spec.md
openspec/changes/map-timeline/: README.md  design.md  proposal.md  tasks.md
openspec/changes/map-timeline/specs/knowledge-views/: spec.md
openspec/changes/mcp-server/: README.md  design.md  proposal.md  tasks.md
openspec/changes/mcp-server/specs/mcp-server/: spec.md
openspec/changes/review-inbox/: design.md  proposal.md  tasks.md
openspec/changes/review-inbox/specs/review-inbox/: spec.md
openspec/changes/sync-engine/: README.md  design.md  proposal.md  tasks.md
openspec/changes/walking-skeleton/: design.md  proposal.md  tasks.md
scripts/: release-gate.sh  sync-version.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/chat/: ChatDrawer.svelte  ChatResizer.svelte  ChatTranscript.svelte  TerminalView.svelte
src/files/: CsvEditor.svelte  EditorPane.svelte  FileGlyph.svelte  FileTree.svelte  FindBar.svelte  ImportDialog.svelte  InlineNameRow.svelte  MarkdownEditor.svelte  PlainEditor.svelte  PreviewPane.svelte  SidebarResizer.svelte  TreeNodeRow.svelte  dnd.svelte.test.ts  dnd.svelte.ts  filesHeader.test.ts  filesHeader.ts  naming.test.ts  naming.ts  tabs.test.ts  tabs.ts  treeEdit.svelte.ts
src/files/previews/: DocxPreview.svelte  FallbackPreview.svelte  HtmlPreview.svelte  ImagePreview.svelte  IpynbPreview.svelte  ModelDownloadDialog.svelte  PdfPreview.svelte  PptxPreview.svelte  PreviewLoading.svelte  TooLargeNotice.svelte  VideoPreview.svelte  XlsxPreview.svelte  docx.test.ts  docx.ts  html.test.ts  html.ts  pptx-style.ts  pptx.test.ts  pptx.ts  pptx.worker.ts  sizeGate.test.ts  sizeGate.ts
src/ingests/: AutomationForm.svelte  AutomationsPane.svelte  IngestForm.svelte  TemplateGallery.svelte
src/lib/: ProgressBar.svelte  api.ts  app.svelte.ts  assist.test.ts  assist.ts  automations.svelte.ts  chatEcho.test.ts  chatEcho.ts  chatWidth.test.ts  chatWidth.ts  chats.svelte.ts  csv.test.ts  csv.ts  digest.svelte.ts  favorites.test.ts  favorites.ts  find-dom.svelte.ts  find-dom.test.ts  find-dom.ts  find.svelte.test.ts  find.svelte.ts  find.test.ts  find.ts  folderTree.test.ts  folderTree.ts  format.test.ts  format.ts  imports.svelte.ts  ingestTabs.test.ts  ingests.svelte.ts  ipynb.test.ts  ipynb.ts  keySend.test.ts  keySend.ts  knowledge.svelte.ts  knowledge.test.ts  knowledge.ts  liveRun.test.ts  liveRun.ts  markdown.test.ts  (+24 more)
src/lib/ui/: ConfirmMenu.svelte  ContextMenu.svelte  KenMark.svelte
src/onboarding/: ProjectPicker.svelte
src/record/: LevelMeter.svelte  PermissionNotice.svelte
src/research/: ResearchModal.svelte
src/review/: ConflictDetail.svelte
src/screens/: FilesScreen.svelte  HomeScreen.svelte  HomeSearch.svelte  HomeStatus.svelte  IngestsScreen.svelte  MapScreen.svelte  RecentFiles.svelte  RecordScreen.svelte  ReviewScreen.svelte  SettingsScreen.svelte  TimelineScreen.svelte  homeStatus.test.ts  homeStatus.ts
src/search/: SearchOverlay.svelte
src/shell/: NavRail.svelte  Placeholder.svelte  ProjectSwitcher.svelte  Shell.svelte  TitleBar.svelte
(+8 files in other folders)
