[workspace]
resolver = "2"
members = ["crates/ken-core", "crates/ken-mcp", "src-tauri"]

[workspace.package]
version = "0.1.2"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.dev.package."*"]
opt-level = 2
