[package]
name = "ken-app"
version.workspace = true
edition.workspace = true

[lib]
name = "ken_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ken-core = { path = "../crates/ken-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
ignore = "0.4"
base64 = "0.22"
uuid.workspace = true
chrono = "0.4"
