[package]
name = "ken-app"
version.workspace = true
edition.workspace = true

[lib]
name = "ken_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ken-core = { path = "../crates/ken-core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
ignore = "0.4"
base64 = "0.22"
uuid.workspace = true
chrono = "0.4"
# The record session names `hound::WavWriter` as a struct field type, so hound
# must be a direct dependency here (not just transitively via ken-core).
hound = "3.5"
# Recoverable delete: move files/folders to the OS trash (Finder Trash, Recycle
# Bin, freedesktop Trash) instead of unlinking them permanently.
trash = "5"

[dev-dependencies]
tempfile = "3"
