[package]
name = "ken-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite = { version = "0.38", features = ["bundled"] }
notify = "8"
ignore = "0.4"
calamine = "0.31"
pdf-extract = "0.9"
zip = { version = "5", default-features = false, features = ["deflate"] }
quick-xml = "0.38"
kamadak-exif = "0.6"
dirs = "6"
serde_yaml = "0.9"
portable-pty = "0.9"
tiny_http = "0.12"
similar = "2"
cpal = "0.18"
hound = "3.5"
# Blocking, streamed HTTPS GET for the in-app model downloader — the only
# network the app performs (a deliberate, user-initiated fetch). ureq is a tiny
# blocking client using rustls (no OpenSSL/native-tls); default features would
# pull gzip/json/charset we don't need, so it's trimmed to just TLS.
ureq = { version = "2", default-features = false, features = ["tls"] }
# On-device speech-to-text for video transcripts. Bundles whisper.cpp and
# builds it from source (needs cmake + a C/C++ toolchain), so it is gated
# behind a default feature: everything else in ken-core still builds if the
# native toolchain is unavailable (`--no-default-features`).
whisper-rs = { version = "0.16", optional = true }
# Embedded on-device LLM (llama.cpp) for instant quick answers and Map entity
# extraction. Bundles llama.cpp and builds it from source with Metal GPU
# offload (needs cmake + a C/C++ toolchain), so it is gated behind a default
# feature — like `whisper`, everything else still builds with
# `--no-default-features`. default-features off drops the crate's own default
# backends; we opt into just `metal`.
llama-cpp-2 = { version = "=0.1.151", default-features = false, features = ["metal"], optional = true }

[features]
default = ["whisper", "local-llm"]
whisper = ["dep:whisper-rs"]
local-llm = ["dep:llama-cpp-2"]

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "8.0.0"
objc2 = "0.6"
objc2-av-foundation = "0.3"
block2 = "0.6"

[dev-dependencies]
tempfile = "3"
