[package]
name = "ken-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = "1"
uuid.workspace = true
rusqlite = { version = "0.38", features = ["bundled"] }
notify = "8"
ignore = "0.4"
calamine = "0.31"
pdf-extract = "0.9"
zip = { version = "5", default-features = false, features = ["deflate"] }
quick-xml = "0.38"
kamadak-exif = "0.6"
dirs = "6"
serde_yaml = "0.9"
portable-pty = "0.9"
tiny_http = "0.12"
similar = "2"
cpal = "0.18"
hound = "3.5"
# Blocking, streamed HTTPS GET for the in-app model downloader — the only
# network the app performs (a deliberate, user-initiated fetch). ureq is a tiny
# blocking client using rustls (no OpenSSL/native-tls); default features would
# pull gzip/json/charset we don't need, so it's trimmed to just TLS.
# `native-certs` makes ureq verify against the operating system's trust store
# (rustls-native-certs — still rustls, NOT native-tls/OpenSSL) instead of only
# ureq's compiled-in Mozilla root list. A desktop app should trust whatever the
# user's OS trusts: without this, machines behind a TLS-inspecting corporate
# proxy (which re-signs certs with a private root installed in the OS keychain)
# fail the download with `invalid peer certificate: UnknownIssuer`.
ureq = { version = "2", default-features = false, features = ["tls", "native-certs"] }
[features]
default = ["whisper", "local-llm"]
whisper = ["dep:whisper-rs"]
local-llm = ["dep:llama-cpp-2"]

# On-device speech-to-text (whisper.cpp) and embedded LLM (llama.cpp) for
# quick answers and Map entity extraction. Both bundle ggml and build it from
# source (cmake + C/C++ toolchain), so each is gated behind a default feature:
# everything else in ken-core still builds with `--no-default-features`.
#
# The GPU backend feature is target-specific, and it is load-bearing that BOTH
# crates enable the SAME backend on each platform: whisper-rs and llama-cpp-2
# each bundle a ggml, and the linker resolves the shared ggml symbols from
# whisper's copy. A mismatch silently strips the GPU backend from llama.cpp
# (all layers land on CPU despite n_gpu_layers).
#   macOS   -> metal
#   Windows -> vulkan (needs the Vulkan SDK's glslc at build time; at runtime
#              vulkan-1.dll ships with GPU drivers)
#   other   -> CPU-only (what Linux CI exercises)
[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"], optional = true }
llama-cpp-2 = { version = "=0.1.151", default-features = false, features = ["vulkan"], optional = true }

[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
whisper-rs = { version = "0.16", optional = true }
llama-cpp-2 = { version = "=0.1.151", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"], optional = true }
llama-cpp-2 = { version = "=0.1.151", default-features = false, features = ["metal"], optional = true }
screencapturekit = "8.0.0"
objc2 = "0.6"
objc2-av-foundation = "0.3"
block2 = "0.6"
# Native OCR (module `ocr`) via Apple Vision. Like `record`, these are pure
# binding crates (no C/C++ toolchain, no cmake) so they compile unconditionally
# on macOS rather than behind a cargo feature. The objc2 framework crates are
# the 0.3.x family that pairs with objc2 0.6 (same as objc2-av-foundation).
# Only the specific submodules we touch are enabled to keep build time down.
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSArray",
    "NSError",
    "NSValue",
    "NSGeometry",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "CFData",
    "CFString",
    "CFDictionary",
    "CFArray",
    "CFBase",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "std",
    "CGImage",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "CGGeometry",
    "CGBase",
    "CGDataProvider",
    "CGPDFDocument",
    "CGPDFPage",
] }
objc2-image-io = { version = "0.3", default-features = false, features = [
    "std",
    "CGImageSource",
    "objc2-core-graphics",
] }
objc2-vision = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    # Enables `VNImageRequestHandler::initWithCGImage:options:` (feeding a
    # CGImage straight into Vision).
    "objc2-core-graphics",
    "VNRequest",
    "VNRequestHandler",
    "VNObservation",
    "VNRecognizeTextRequest",
    "VNTypes",
] }

[dev-dependencies]
tempfile = "3"
